objects/Project_Team_Member__c.object
<CustomObject>
    <description>This field is for checking relation between two object</description>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Active1__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <label>Team Member</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year_to_complete__c</fullName>
        <label>Year to complete</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Project Team Member</label>
    <nameField>
        <label>Project Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>